Now using java 11 so it works with older versions